# webuntis_abw_mailer

./: .gitignore  config_template.ini  config_template.py  pyproject.toml  webuntis_abw_mailer.py
